fixed Fly overlay z-index when added Hover Image from Pro plugin

--- a/src/templates/items-list/items-style/fly/style.scss
+++ b/src/templates/items-list/items-style/fly/style.scss
@@ -30,6 +30,12 @@
     right: 0;
     bottom: 0;
     left: 0;
+
+    // Fix FireFox image blinking
+    // @link https://github.com/nk-crew/visual-portfolio/issues/92
+    // -
+    // Also fix conflict with Hover Image in the Pro plugin.
+    z-index: 2;
     overflow: hidden;
     color: var(--vp-items-style-fly--overlay__color);
     text-align: center;
